--- a/deno.json
+++ b/deno.json
@@ -79,7 +79,7 @@
       ]
     }
   },
-  "nodeModulesDir": "auto",
+  "nodeModulesDir": true,
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
